# smithery

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: llama3.2-react.yaml  mistral-7b-tools.yaml  phi3-tool-calling.yaml  qwen2.5-mcp.yaml
examples/: quickstart.py
smithery/: __init__.py  cli.py  config.py  types.py
smithery/data/: __init__.py  formats.py  generators.py  mcp_importer.py  validators.py
smithery/eval/: __init__.py  benchmark.py  param_extraction.py  plan_quality.py  safety.py  tool_accuracy.py
smithery/export/: __init__.py  gguf.py  hf_hub.py  merge.py
smithery/serve/: __init__.py  quick_test.py
smithery/train/: __init__.py  callbacks.py  configs.py  lora.py
tests/: conftest.py
tests/unit/: test_config.py  test_export.py  test_types.py
