[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "smithery"
dynamic = ["version"]
description = "Forge tool-calling models from your API definitions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Soham Dutta" }]
keywords = [
    "fine-tuning",
    "tool-calling",
    "mcp",
    "llm",
    "qlora",
    "synthetic-data",
    "agent",
    "function-calling",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
    "datasets>=2.14",
    "transformers>=4.40",
    "peft>=0.10",
    "trl>=0.8",
    "torch>=2.2",
    "accelerate>=0.28",
    "bitsandbytes>=0.43",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
export = [
    "llama-cpp-python>=0.2",
    "huggingface-hub>=0.22",
]
wandb = ["wandb>=0.16"]
all = ["smithery[export,wandb]"]
dev = [
    "smithery[all]",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.9",
    "types-PyYAML>=6.0",
    "ruff>=0.3",
    "pre-commit>=3.6",
]

[project.scripts]
smithery = "smithery.cli:app"

[project.urls]
Homepage = "https://github.com/NP-compete/smithery"
Documentation = "https://github.com/NP-compete/smithery#readme"
Repository = "https://github.com/NP-compete/smithery"
Issues = "https://github.com/NP-compete/smithery/issues"
Discussions = "https://github.com/NP-compete/smithery/discussions"
Changelog = "https://github.com/NP-compete/smithery/releases"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["smithery"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["smithery"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "peft.*",
    "trl.*",
    "datasets.*",
    "bitsandbytes.*",
    "llama_cpp.*",
    "wandb.*",
    "accelerate.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config", "-q"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["smithery"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]
